--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>위니브 페이지</title>
+    <title>위니브 홈페이지</title>
 </head>
 <body>
     <header>
@@ -27,7 +27,7 @@
     <!-- script로 내용이 추가되는 경우 -->
     <script>
         const contents = document.querySelector('.contents');
-        contents.innerHTML = '<h2>위니브 서비스 바로가기</h2><p>위니북스</p><button>바로가기</button>';
+        contents.innerHTML = '<h2>위니브 서비스 바로가기</h2><p>위니북스</p><button>위니브 서비스 목록으로 바로가기</button>';
     </script>
 </body>
 </html>
